<resources>
    <string name="app_name" translatable="false">Simlog</string>
    <string name="start_button_ok" translatable="false">OK</string>
    <string name="start_button_notice" translatable="false">Notice</string>
    <string name="start_button_privacy" translatable="false">Privacy</string>
    <string name="start_button_permit" translatable="false">Permit</string>
    <string name="start_button_youtube" translatable="false">Youtube</string>
    <string name="collect_button_notific" translatable="false">Notification</string>
    <string name="collect_button_battery" translatable="false">Battery</string>
    <string name="collect_button_power" translatable="false">Power</string>
    <string name="collect_lottie_power" translatable="false">Power anim</string>
    <string name="add_router_btn" translatable="false">add router</string>
    <string name="ad_id_allow" translatable="false">Allow AD_ID</string>
    <string name="ad_id_deny" translatable="false">Deny AD_ID</string>
    <string name="choose_button_left" translatable="false">start collect</string>
    <string name="choose_button_right" translatable="false">open chart</string>
    <string name="sim_slot" translatable="false">SIM_</string>
    <string name="privacy_button" translatable="false">privacy_button</string>
    <string name="sim_list" translatable="false">sim list</string>
    <string name="sim_list_error" translatable="false">sim list error</string>
    <string name="native_collect_scroll" translatable="false">nativeAd_collect</string>
    <string name="native_choose_scroll" translatable="false">nativeAd_choose</string>
    <string name="user_image" translatable="false">User Image</string>
    <string name="user_image_btn" translatable="false">User Image Button</string>
    <string name="default_password" translatable="false">********</string>
    <string name="default_login" translatable="false">login / \"remove\"</string>
    <string name="default_ip" translatable="false">ip (local only)</string>
    <string name="custom_cmd" translatable="false">UsbModem1</string>

    <string name="start_promo_text">Advertising</string>
    <string name="privacy_checkbox">I confirm that I have read and agree to the terms of the Privacy Policy.</string>
    <string name="service_stopped">Push the generator.</string>
    <string name="notification_title">Simlog is running.</string>
    <string name="notification_text">Don\'t remove this notification.</string>
    <string name="notification_channel">Service.</string>
    <string name="permission_denied">Permission required.</string>
    <string name="file_read_error">FAILED TO READ FILE.</string>
    <string name="no_data_to_display">NO DATA TO DISPLAY.</string>
    <string name="no_data_files">No data files.</string>
    <string name="need_choose_sim">Need to choose sim cards.</string>
    <string name="no_sim">SIM cards not found.</string>
    <string name="subscription_error">The device does not support the functionality of the application.</string>
    <string name="collecting_time">Run time :</string>
    <string name="collecting_write_lines">All data :</string>
    <string name="collecting_errors">All errors :</string>
    <string name="collecting_day">d</string>
    <string name="collecting_hour">h</string>
    <string name="collecting_min">m</string>
    <string name="collecting_sec">s</string>
    <string name="ad_id_text"><![CDATA[<br><br>We use an advertising network to serve ads.<br><br>
The advertising network may collect data, including your device\'s advertising identifier, to serve personalized ads.<br><br>
You can <font color = "#43A047"><b>allow</b></font> or <font color = "#F44336"><b>turn off</b></font> ad personalization.<br><br>
If you turn off personalization, we will only serve non-personalized ads.<br><br>]]></string>

    <string name="permit"><![CDATA[<br><br><b>The app processes the following types of data:</b><br><br>
<em>1. Mobile network signal strength.</em><br>
<em>2. Data transfer type.</em><br>
<em>3. Slot number of the active SIM card.</em><br>
<em>4. SIM card name.</em><br><br>
To retrieve this SIM card-related data, the app will request permission to<b> manage calls.</b><br><br>
For more details, click on the <b>Privacy icon.</b><br><br>
Additionally, for long-term and stable operation, the application requires permission to display a persistent notification.<br>
    If the notification is turned off during operation, the application may be stopped by the system.<br><br>
    Disabling background activity control (recommended) will further protect the app from being stopped by the system during prolonged operation.<br><br>
<b>The following data type notations are used in the app:</b> <br><br>
<font color="#E040FB"><b> 5G </b></font> - it means NR (New Radio), 5G NSA, 5G SA <br>
<font color="#2962FF"><b> 4G </b></font> - it means LTE, LTE (CA2), Evolved 3G (LTE) <br>
<font color="#00C853"><b> 3G </b></font> - it means one of HSDPA, HSUPA, HSPA, EVDO_B, EHRPD, UMTS. <br>
<font color="#E53935"><b> 2G </b></font> - it means one of EDGE, GPRS, CDMA, 1xRTT, IDEN. <br>
<font color="#795548"><b> xG </b></font> - it means unknown, because no data transfer.<br><br>
<b><font color="#43A047">RSRP&nbsp;&gt;&nbsp;&nbsp;-80&nbsp;&nbsp;||&nbsp;RSSI&nbsp;&gt;&nbsp;-65&nbsp;=&nbsp;&nbsp;&nbsp;5</font></b><br>
<b><font color="#7CB342">RSRP&nbsp;&gt;&nbsp;&nbsp;-90&nbsp;&nbsp;||&nbsp;RSSI&nbsp;&gt;&nbsp;-75&nbsp;=&nbsp;&nbsp;&nbsp;4</font></b><br>
<b><font color="#FBC02D">RSRP&nbsp;&gt;&nbsp;-100&nbsp;||&nbsp;RSSI&nbsp;&gt;&nbsp;-85&nbsp;=&nbsp;&nbsp;&nbsp;3</font></b><br>
<b><font color="#FB8C00">RSRP&nbsp;&gt;&nbsp;-110&nbsp;||&nbsp;RSSI&nbsp;&gt;&nbsp;-95&nbsp;=&nbsp;&nbsp;&nbsp;2</font></b><br>
<b><font color="#D32F2F">RSRP&nbsp;&gt;&nbsp;-120&nbsp;||&nbsp;RSSI&nbsp;&gt;&nbsp;-120&nbsp;=&nbsp;1</font></b><br><br>
<b>Supported routers :</b><br>
Keenetic | Netcraze<br>
Cudy LT500 V2.0<br>
TP-Link TL-MR150 v2<br>
Huawei CPE B593s-22<br>
Huawei E3372h-320<br>
Huawei B535-232a<br><br>
<b>The app is not a measurement tool.</b><br>
The data displayed on the graphs is generated, taking into account the information received from your device. And may differ from the actual data.<br><br>
]]></string>

    <string name="notice"><![CDATA[<br><br><b>This app includes open source and third-party libraries:</b><br><br>
1. <b>MPAndroidChart</b> <a href="https://github.com/PhilJay/MPAndroidChart/">https://github.com/PhilJay/MPAndroidChart/</a><br>
   Licensed under the Apache License, Version 2.0.<br>
   <b>Author:</b> Philipp Jahoda (PhilJay)<br><br>
2. <b>Free data Animation</b> <a href="https://lottiefiles.com/free-animation/data-V8HWwl7oWO">https://lottiefiles.com/free-animation/data-V8HWwl7oWO</a><br>
   Licensed under the Lottie Simple License (FL 9.13.21)<br>
   <b>Author:</b> Revital Cahani <br><br>
3. <b>Lottie</b> <a href="https://github.com/airbnb/lottie-android">https://github.com/airbnb/lottie-android</a><br>
   Licensed under the Apache License, Version 2.0<br>
   <b>Copyright ©</b> Airbnb, Inc. <br><br>
4. <b>OkHttp</b> <a href="https://github.com/square/okhttp">https://github.com/square/okhttp</a><br>
   Licensed under the Apache License, Version 2.0<br>
   <b>Copyright ©</b> Square, Inc. <br><br>
5. <b>Okio</b> <a href="https://github.com/square/okio">https://github.com/square/okio</a><br>
   Licensed under the Apache License, Version 2.0<br>
   <b>Copyright ©</b> Square, Inc. <br><br>
6. <b>rci-tools</b> <a href="https://github.com/Eralde/rci-tools">https://github.com/Eralde/rci-tools</a><br>
   Licensed under the ISC License<br>
   <b>Copyright ©</b> Eralde <br><br>
]]></string>



</resources>