<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/startView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">


    <androidx.cardview.widget.CardView
        android:id="@+id/startActCardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/no_data"
        app:cardCornerRadius="10dp"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toTopOf="@+id/startOkButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/startTextView0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="serif"
                android:gravity="center_vertical"
                android:textColor="@color/black2"
                android:textColorLink="@color/blue_500"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </ScrollView>


    </androidx.cardview.widget.CardView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/startYoutubeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/start_button_youtube"
        android:src="@drawable/youtube_activity_48px"
        app:backgroundTint="@color/green_600"
        app:elevation="3dp"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@+id/startOkButton"
        app:layout_constraintEnd_toStartOf="@+id/startPermitButton"
        app:layout_constraintStart_toStartOf="@+id/startActCardView"
        app:rippleColor="@color/green_100"
        app:tint="@color/no_data" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/startPermitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/start_button_permit"
        android:onClick="setTextView0ByClick"
        android:src="@drawable/start_button_permit"
        app:backgroundTint="@color/green_600"
        app:elevation="3dp"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@+id/startOkButton"
        app:layout_constraintEnd_toStartOf="@+id/startNoticeButton"
        app:layout_constraintStart_toEndOf="@+id/startYoutubeButton"
        app:rippleColor="@color/green_100"
        app:tint="@color/no_data" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/startNoticeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/start_button_notice"
        android:onClick="setTextView0ByClick"
        android:src="@drawable/start_button_notice"
        app:backgroundTint="@color/green_600"
        app:elevation="3dp"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@+id/startOkButton"
        app:layout_constraintEnd_toStartOf="@+id/startPrivacyButton"
        app:layout_constraintStart_toEndOf="@+id/startPermitButton"
        app:rippleColor="@color/green_100"
        app:tint="@color/no_data" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/startPrivacyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/start_button_privacy"
        android:onClick="setTextView0ByClick"
        android:src="@drawable/start_button_privacy"
        app:backgroundTint="@color/green_600"
        app:elevation="3dp"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@+id/startOkButton"
        app:layout_constraintEnd_toStartOf="@+id/startOkButton"
        app:layout_constraintStart_toEndOf="@+id/startNoticeButton"
        app:rippleColor="@color/green_100"
        app:tint="@color/no_data" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/startOkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/start_button_ok"
        android:onClick="setTextView0ByClick"
        android:src="@drawable/start_button_ok"
        app:backgroundTint="@color/blue_500"
        app:elevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/startActCardView"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/startPrivacyButton"
        app:rippleColor="@color/light_blue_200"
        app:tint="@color/no_data" />


</androidx.constraintlayout.widget.ConstraintLayout>